# ucos2-arm

./: .gitignore  CMakeLists.txt  Makefile  ucosii.lds
boot/: bsp.c  page_table.c  start.S
kernel/: app_cfg.h  os_cfg.h  os_core.c  os_dbg.c  os_flag.c  os_mbox.c  os_mem.c  os_mutex.c  os_q.c  os_sem.c  os_task.c  os_time.c  os_tmr.c  ucos_ii.h
lib/: lib_ascii.c  lib_ascii.h  lib_def.h  lib_math.c  lib_math.h  lib_mem.c  lib_mem.h  lib_str.c  lib_str.h  ti.board.aa15fg  ti.csl.aa15fg  ti.csl.init.aa15fg  ti.drv.uart.aa15fg  ti.osal.aa15fg
platform/arm/: cpu.h  cpu_a.S  cpu_cfg.h  cpu_core.c  os_cfg.h  os_cpu.h  os_cpu_a.S  os_cpu_c.c  os_cpu_cfg.h
platform/csp/: dsp.c  dsp.h  gic.c  gic.h  mmc.c  mmc.h  mmio.h  timer.c  timer.h  types.h  uart.c  uart.h
task/: app.c  app_cfg.h  snprintf.c  snprintf.h
